changed primpary color from #FFFFFF to #7C3AED

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #FFFFFF;
+  --primary-color: #7C3AED;
   --secondary-color: #2B2B2B;
   --salt-pepper-white: #FFFFFF;
   --salt-pepper-light-gray: #D4D4D4;
