--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,28 @@
 :root {
-  --primary-color: #7C3AED;
-  --secondary-color: #2B2B2B;
-  --salt-pepper-white: #FFFFFF;
+  /* --primary-color: #7C3AED; */
+  
+  /* Using the deep blue/gray as the primary brand color */
+  --primary-color: #6B7C98;
+
+  /* --secondary-color: #2B2B2B; */
+
+  /* Using the dark slate for strong text and headers */
+  --secondary-color: #5E5653;
+
+  /* --salt-pepper-white: #FFFFFF;
   --salt-pepper-light-gray: #D4D4D4;
-  --salt-pepper-medium-gray: #B3B3B3;
-  --salt-pepper-dark: #2B2B2B;
+  --salt-pepper-medium-gray: #B3B3B3; */
+
+  /* Background and Surface Colors */
+  --salt-pepper-white: #E9E6E7;
+  --salt-pepper-light-gray: #AB978C;
+  --salt-pepper-medium-gray: #7B7F8A;
+
+
+  /* --salt-pepper-dark: #2B2B2B; */
+  
+  /* Deepest tone for maximum contrast */
+  --salt-pepper-dark: #5E5653;
 }
 
 body {
